# q7-rust-launcher

./: .gitignore  AUTOCOMPLETE.md  Cargo.toml  README.md  SPOTIFY_CONTROLS.md  updated_config.json
.github/workflows/: release.yml
assets/: clean_config.json  config.json
src/: actions.rs  app_state.rs  apps.rs  autocomplete.rs  commands.rs  config.rs  main.rs  search.rs  theme.rs  ui.rs  utils.rs
