[package]
name = "q7-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
which = "6"
xdg = "2"
urlencoding = "2"

eframe = { version = "0.27", features = ["default"] }
egui_extras = "0.27"
notify = "6"
fuzzy-matcher = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }

# For loading PNG/JPEG icons
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
