[package]
name = "q7-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
xdg = "2"
urlencoding = "2"

eframe = { version = "0.27", features = ["default"] }
fuzzy-matcher = "0.3"

# For loading PNG/JPEG icons
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = "z"        
lto = "thin"            
codegen-units = 1      
panic = "abort"         
strip = "symbols"       
