[package]
name = "q7-launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q7-launcher"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
xdg = "2"
urlencoding = "2"

eframe = { version = "0.27", features = ["default"] }
fuzzy-matcher = "0.3"

# For loading PNG/JPEG icons
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "shlobj", "combaseapi", "objbase", "oleauto", "processthreadsapi", "winbase", "wingdi"] }
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_Foundation", "Win32_System_Ole", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "z"        
lto = "thin"            
codegen-units = 1      
panic = "abort"         
strip = "symbols"       
